KinD/ingressByLinuxTips/kind-sample.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=fooApp"
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  # type: LoadBalancer
  selector:
    app: foo
  ports:
  # Default port used by the image
  - port: 5678
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar App"
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  # type: LoadBalancer
  selector:
    app: bar
  ports:
  # Default port used by the image
  - port: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/fooo"
        backend:
          service:
            name: foo-service
            port:
              number: 5678
      - pathType: Prefix
        path: "/barr"
        backend:
          service:
            name: bar-service
            port:
              number: 5678
---
